--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,15 @@
 Package: amba
 Title: Additive Models for Business Applications
-Version: 0.2.0
-Date: 2009-11-19
-Author: CHARLOTTE MAIA
+Version: 0.2.1
+Date: 2010-02-6
+Author: Charlotte Maia
 Maintainer: Charlotte Maia <maiagx@gmail.com>
-Description: Additive models with a strong technical focus on term
-        objects, model selection (semiparametric), missing explanatory
-        values and interpretation. These models are restricted to
-        vaguely-normal responses, plus have very little support for
-        correlated explanatories and statistical inference. This
-        package is not complete.
+Description: An incomplete package for using additive models in
+        business. The models (currently) emphasize semiparametric
+        models (predictors), interpretation and missing explanatory
+        values.
 License: GPL (>= 2)
 Depends: oosp (>= 0.2.0)
-Packaged: 2009-11-19 06:56:04 UTC; maia
+Packaged: 2010-02-06 10:07:52 UTC; maia
 Repository: CRAN
-Date/Publication: 2009-11-20 07:53:15
+Date/Publication: 2010-02-06 14:32:22
