--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,13 @@
 Package: amba
 Title: Additive Models for Business Applications
-Version: 0.2.1
-Date: 2010-02-6
+Version: 0.2.4
+Date: 2010-05-25
 Author: Charlotte Maia
 Maintainer: Charlotte Maia <maiagx@gmail.com>
-Description: An incomplete package for using additive models in
-        business. The models (currently) emphasize semiparametric
-        models (predictors), interpretation and missing explanatory
-        values.
+Description: A package for using additive models in business. This
+        package is pending a major rewrite.
 License: GPL (>= 2)
-Depends: oosp (>= 0.2.0)
-Packaged: 2010-02-06 10:07:52 UTC; maia
+Depends: ofp (>= 0.4.0)
+Packaged: 2010-05-25 03:25:11 UTC; maia
 Repository: CRAN
-Date/Publication: 2010-02-06 14:32:22
+Date/Publication: 2010-05-27 06:55:46
