--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: amba
 Title: Additive Models for Business Applications
-Version: 0.2.4
-Date: 2010-05-25
+Version: 0.3.0
+Date: 2010-06-13
 Author: Charlotte Maia
 Maintainer: Charlotte Maia <maiagx@gmail.com>
-Description: A package for using additive models in business. This
-        package is pending a major rewrite.
+Description: A package for using additive models in business, with an
+        emphasis on functional estimates and missing values. This
+        package is incomplete.
 License: GPL (>= 2)
-Depends: ofp (>= 0.4.0)
-Packaged: 2010-05-25 03:25:11 UTC; maia
+Depends: ofp (>= 0.5.0)
+Packaged: 2010-06-13 05:10:34 UTC; maia
 Repository: CRAN
-Date/Publication: 2010-05-27 06:55:46
+Date/Publication: 2010-06-15 08:49:44
